[package]
name = "expression_format_impl"
version = "1.1.1"
authors = ["Sebastian Ortmann <ortmann.sebastian@gmail.com>"]
edition = "2018"
description = "macros implementation for crate expression_format."
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/sortmann/expression_format_impl"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
proc-macro = true